# inference_eval

./: AGENTS.md  LICENSE  README.md  pyproject.toml
inference_eval/: __init__.py  cli.py  evaluate.py  extract.py  infer.py  main.py  schema.py  scoreboard.py  utils.py
inference_eval/inference/: __init__.py  base.py  diffusion_engine.py  openai_engine.py  server_engine.py  sglang_engine.py  vllm_engine.py
inference_eval/models/: __init__.py  capture.py  offline.py
tests/: test_diffusion_engine.py  test_e2e.py  test_inference_base.py  test_main.py  test_models.py  test_per_task_settings.py  test_schema.py  test_scoreboard.py  test_server_engine.py  test_task_groups.py  test_utils.py
