[project]
name = "inference-eval"
version = "0.1.0"
description = "Inference evaluation toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[project.scripts]
inference-eval = "inference_eval.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["ruff", "pytest"]
