[project]
name = "inference-eval"
version = "0.1.0"
description = "Decouple inference from evaluation using lm-eval-harness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "lm-eval>=0.4.0",
    "click>=8.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.6.0"]
sglang = ["sglang[all]>=0.3.0"]
openai = ["openai>=1.0.0"]

[project.scripts]
inference-eval = "inference_eval.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["ruff", "pytest"]
